--- a/django_chat/chatrooms/templates/chatrooms/index.html
+++ b/django_chat/chatrooms/templates/chatrooms/index.html
@@ -1,25 +1,19 @@
 {% load static %}
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Chat Room</title>
+    <title>Chat Rooms</title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
     {% include 'chatrooms/nav.html' %}
-    <a class="leaveButton" href="{% url 'index' %}">Leave Room</a>
-
     <div class="container">
-        <div id="chat-log"></div>
+        <h3 class="heading">What chat room would you like to enter?</h3>
+        <input class="textInput" id="room-name-input" type="text" size="100"><br>
+        <input class="button" id="room-name-submit" type="button" value="Enter">
     </div>
 
-    <div class="container">
-        <input class="textInput" id="chat-message-input" type="text" size="100"><br>
-        <input class="button" id="chat-message-submit" type="button" value="Send">
-        {{ room_name|json_script:"room-name" }}
-    </div>
-    <script src="{% static 'room.js' %}"></script>
+    <script src="{% static 'index.js' %}"></script>
 </body>
 </html>
