--- a/django_chat/templates/account/signup.html
+++ b/django_chat/templates/account/signup.html
@@ -9,7 +9,7 @@
 <div class="form-container">
   <h1 class="header">{% trans "Sign Up" %}</h1>
 
-  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  <form class="signup" enctype="multipart/form-data" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
