--- a/django_chat/chatrooms/templates/chatrooms/list_rooms.html
+++ b/django_chat/chatrooms/templates/chatrooms/list_rooms.html
@@ -12,7 +12,7 @@
       <h2>All Chat Rooms</h2>
       <ul>
         {% for room in rooms %}
-          <li><a href="{% url 'room' room.name %}">{{ room.name }}</a></li>
+          <li><a href="{% url 'room' room.name %}">{{ room.name }}</a> <span>({{ room.users.count }} users)</span></li>
         {% endfor %}
       </ul>
       <a href="{% url 'create_room' %}" class="button">Create New Room</a>
